--- a/templates/product/item.html
+++ b/templates/product/item.html
@@ -1,6 +1,19 @@
 {% extends "main_classic.html" %}
+{% load product_tags %}
+
+{% block menu_product %}selected{% endblock %}
 
 {% block header %}Modification d'un produit{% endblock %}
+
+{% if product|is_in_charge:user %}
+{% block buttons %}
+<div class="btn_wrapper">
+  <a href="{% url product_delete product.id %}" class="btn_big">
+    <img src="{{ MEDIA_URL }}img/icons/cross.png" />Supprimer
+  </a>
+</div>
+{% endblock %}
+{% endif %}
 
 {% block content %}
 <form action="{% url product_item product.id %}" method="post">{% csrf_token %}
